src/test/ui/associated-types/defaults-in-other-trait-items.stderr
error[E0308]: mismatched types
  --> $DIR/defaults-in-other-trait-items.rs:9:13
   |
LL |     type A = ();
   |     ------------ associated type defaults can't be assumed inside the trait defining them
...
LL |         let () = p;
   |             ^^   - this expression has type `<Self as Tr>::A`
   |             |
   |             expected associated type, found `()`
   |
   = note: expected associated type `<Self as Tr>::A`
                    found unit type `()`

error[E0308]: mismatched types
  --> $DIR/defaults-in-other-trait-items.rs:36:25
   |
LL |     type Ty = u8;
   |     ------------- associated type defaults can't be assumed inside the trait defining them
...
LL |     const C: Self::Ty = 0u8;
   |                         ^^^ expected associated type, found `u8`
   |
   = note: expected associated type `<Self as AssocConst>::Ty`
                         found type `u8`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
